welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Short)Int
match expected type ?
	while (2*biscuit = orange+1) {
                ^